feat: add nav-bar
feat: add nav HTML

feat: add basic nav

fix: change color on nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
         <title>Allan Efendic</title>
     </head>
     <body>
-
+        <header id="header">
+            <nav id="nav-bar">
+                <ul>
+                    <li><a href="#welcome-section">Home</a></li>
+                    <li><a href="#information">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        
+        <main>
+            <section id="welcome-section" class="section" name="welcome"></section>
+            <section id="information" class="section" name="information"></section>
+            <section id="projects" class="section" name="projects"></section>
+            <section id="contact" class="section" name="contact"></section>
+        </main>
 
 
         <script src="app.js"></script>
