fix: some details on first section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         </header>
         
         <main>
-            <section id="welcome-section" class="section" name="welcome"></section>
+            <section id="welcome-section" class="section" name="welcome">
+                <div id="name-contatiner" class="container">
+                    <h1 id="name">Allan Efendic</h1>
+                    <p id="job-title">Software-engineer</p>
+                </div>
+            </section>
             <section id="information" class="section" name="information"></section>
             <section id="projects" class="section" name="projects"></section>
             <section id="contact" class="section" name="contact"></section>
