--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <nav id="nav-bar">
                 <ul>
                     <li><a href="#welcome-section">Home</a></li>
-                    <li><a href="#information">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#information-section">About</a></li>
+                    <li><a href="#projects-section">Projects</a></li>
+                    <li><a href="#contact-section">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -26,9 +26,38 @@
                     <p id="job-title">Software-engineer</p>
                 </div>
             </section>
-            <section id="information" class="section" name="information"></section>
-            <section id="projects" class="section" name="projects"></section>
-            <section id="contact" class="section" name="contact"></section>
+            <section id="information-section" class="section" name="information">
+                <div id="location-container" class="container accordion">
+                    <h2 class="accordion-title">Location</h2>
+                    <article class="accordion-text">
+                        <p>Stockholm</p>
+                        <p>Sweden</p>
+                        <p>Central-european time</p>
+                    </article>
+                </div>
+                <div id="skills-container" class="container accordion">
+                    <h2 class="accordion-title">Skills</h2>
+                    <article class="accordion-text">
+                        <p>Javascript ES6</p>
+                        <p>HTML</p>
+                        <p>CSS</p>
+                        <p>React.js</p>
+                        <p>Redux</p>
+                        <p>Java</p>
+                        <p>Git</p>
+                    </div>
+                </article>
+                <div id="languages-container" class="container accordion">
+                    <h2 class="accordion-title">Languages</h2>
+                    <article class="accordion-text">
+                        <p>English</p>
+                        <p>Swedish</p>
+                        <p>Bosnian-Serbian-Croatian</p>
+                    </article>
+                </div>
+            </section>
+            <section id="projects-section" class="section" name="projects"></section>
+            <section id="contact-section" class="section" name="contact"></section>
         </main>
 
 
