--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="description" content="This is my portfolio-page">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
+        <script src="https://kit.fontawesome.com/996a52687b.js" crossorigin="anonymous"></script>
+        <script src="app.js" defer></script>
         <title>Allan Efendic</title>
     </head>
     <body>
@@ -57,10 +59,15 @@
                 </div>
             </section>
             <section id="projects-section" class="section" name="projects"></section>
-            <section id="contact-section" class="section" name="contact"></section>
+            <section id="contact-section" class="section" name="contact">
+                <h2 id="contact-header">Contact</h2>
+                <div class="wide-container">
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+            </section>
         </main>
 
 
-        <script src="app.js"></script>
+        
     </body>
 </html>
