--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             <section id="contact-section" class="section" name="contact">
                 <h2 id="contact-header">Contact</h2>
                 <div class="wide-container">
-                    <i class="fa-solid fa-envelope"></i>
+                    <a href=""><i class="fa-solid fa-envelope"></i></a>
+                    <a href=""><i class="fa-brands fa-square-github"></i></a>
+                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
                 </div>
             </section>
         </main>
