--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <section id="projects-section" class="section" name="projects"></section>
             <section id="contact-section" class="section" name="contact">
                 <h2 id="contact-header">Contact</h2>
-                <div class="wide-container">
-                    <a href=""><i class="fa-solid fa-envelope"></i></a>
-                    <a href=""><i class="fa-brands fa-square-github"></i></a>
-                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                <div class="wide-container hidden">
+                    <a class="icon-container container" href=""><i class="fa-solid fa-envelope icon"></i></a>
+                    <a class="icon-container container" href=""><i class="fa-brands fa-square-github icon"></i></a>
+                    <a class="icon-container container" href=""><i class="fa-brands fa-square-facebook icon"></i></a>
                 </div>
             </section>
         </main>
