--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <main>
             <section id="welcome-section" class="section" name="welcome">
-                <div id="name-contatiner" class="container">
+                <div class="container" id="name-container" >
                     <h1 id="name">Allan Efendic</h1>
                     <p id="job-title">Software-engineer</p>
                 </div>
