--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <meta name="description" content="This is my portfolio-page">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/996a52687b.js" crossorigin="anonymous"></script>
         <script src="app.js" defer></script>
         <title>Allan Efendic</title>
