fix: remake on layout (information)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
                 </div>
             </section>
             <section id="information-section" class="section" name="information">
-                <div id="location-container" class="container accordion">
+                <article>
+                    <h2 class="sub-header hidden">About me</h2>
+                    <p>My name is Allan</p>
+                    <p>I live in Sweden</p>
+                    <p>Bla bla bla</p>
+                    <p>bla bla bla</p>
+                </article>
+                
+                <div id="accordion-container"><div id="location-container" class="container accordion">
                     <h2 class="accordion-title">Location</h2>
                     <article class="accordion-text">
                         <p>Stockholm</p>
@@ -57,10 +65,12 @@
                         <p>Bosnian-Serbian-Croatian</p>
                     </article>
                 </div>
+            </div>
+                
             </section>
             <section id="projects-section" class="section" name="projects"></section>
             <section id="contact-section" class="section" name="contact">
-                <h2 id="contact-header">Contact</h2>
+                <h2 id="contact-header" class="sub-header hidden">Contact</h2>
                 <div class="wide-container hidden">
                     <a class="icon-container container" href=""><i class="fa-solid fa-envelope icon"></i></a>
                     <a class="icon-container container" href=""><i class="fa-brands fa-square-github icon"></i></a>
