feat: finished styling information-section
feat: finished styling information-section

fix:plus-sign-accordion

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
             </section>
             <section id="information-section" class="section" name="information">
                 <article>
-                    <h2 class="sub-header hidden">About me</h2>
-                    <p>My name is Allan</p>
-                    <p>I live in Sweden</p>
-                    <p>Bla bla bla</p>
-                    <p>bla bla bla</p>
+                    <h2 class="sub-header hidden" id="about-header">About me</h2>
+                    <p class="hidden">My name is Allan</p>
+                    <p class="hidden">I live in Sweden</p>
+                    <p class="hidden">Bla bla bla</p>
+                    <p class="hidden">bla bla bla</p>
+                    <p class="hidden">fnsadif sadoisad jas isa</p>
+                    <p class="hidden">e9iwqe dq9wjd iqwni0</p>
                 </article>
                 
                 <div id="accordion-container"><div id="location-container" class="container accordion">
