feat: basic json-boiletplate

--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
             </div>
                 
             </section>
-            <section id="projects-section" class="section" name="projects"></section>
+            <section id="projects-section" class="section" name="projects">
+                <h2 id="contact-header" class="sub-header hidden">Projects</h2>
+                <div id="projects-container">
+                    
+                </div>
+            </section>
             <section id="contact-section" class="section" name="contact">
                 <h2 id="contact-header" class="sub-header hidden">Contact</h2>
                 <div class="wide-container hidden">
