--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <meta name="description" content="This is my portfolio-page">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./build/css/style.css">
         <script src="https://kit.fontawesome.com/996a52687b.js" crossorigin="anonymous"></script>
-        <script src="../src/app.js" defer></script>
+        <script src="./src/app.js" defer></script>
         <title>Allan Efendic</title>
     </head>
     <body>
