--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <header id="header">
             <nav id="nav-bar">
                 <ul>
+                    <li>test</li>
                     <li><a href="#welcome-section">Home</a></li>
                     <li><a href="#information-section">About</a></li>
                     <li><a href="#projects-section">Projects</a></li>
