--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <meta name="description" content="This is my portfolio-page">
         <meta charset="UTF-8">
+
+        <!--For gh pages-->
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
+
+
         <link rel="stylesheet" href="./build/css/style.css">
         <script src="https://kit.fontawesome.com/996a52687b.js" crossorigin="anonymous"></script>
         <script src="./src/app.js" defer></script>
@@ -13,7 +20,6 @@
         <header id="header">
             <nav id="nav-bar">
                 <ul>
-                    <li>test</li>
                     <li><a href="#welcome-section">Home</a></li>
                     <li><a href="#information-section">About</a></li>
                     <li><a href="#projects-section">Projects</a></li>
