--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta http-equiv='pragma' content='no-cache'>
 
 
-        <link rel="stylesheet" href="./build/css/style.css">
+        <link rel="stylesheet" href="./src/css/style.css">
         <script src="https://kit.fontawesome.com/996a52687b.js" crossorigin="anonymous"></script>
         <script src="./src/app.js" defer></script>
         <title>Allan Efendic</title>
