--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <meta name="description" content="This is my portfolio-page">
         <meta charset="UTF-8">
+        <meta name="theme-color" content="#000">
 
         <!--For gh pages-->
         <meta http-equiv='cache-control' content='no-cache'> 
@@ -80,8 +81,31 @@
             </section>
             <section id="projects-section" class="section" name="projects">
                 <h2 id="contact-header" class="sub-header hidden">Projects</h2>
+
+
+                
                 <div id="projects-container">
                     
+                    <!--
+                    <div class="card">
+                        <figure>
+                            <img src="./build/images/Password.png" alt="project picture" preload>
+                        </figure>
+
+                        <div class="description-wrapper">
+                            <h1>Password manager</h1>
+                            <article>
+                                <p>A full-stack app which allows the user to log in and store passwords from various accounts. The front-end was done with Next.js and the back-end API was done with Express. A MongoDB database is used to store encrypted versions of the user's passwords. Attention: the back-end API is deployed on Render.com and after 15 minutes of inactivity, the server spins down. Therefore the first request can be really slow. Try reloading the page if stuck on your first register or login.</p>
+                            </article>
+
+                            <div class="btn-wrapper">
+                                <div class="proj-btn">Github <i class="fa-brands fa-github btn-icon"></i></div>
+                                <div class="proj-btn">Preview <i class="fa-sharp fa-solid fa-magnifying-glass btn-icon"></i></div>
+                            </div>
+
+
+                        </div>
+                -->
                 </div>
             </section>
             <section id="contact-section" class="section" name="contact">
