feat: new project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h2 class="sub-header hidden" id="about-header">About me</h2>
                     <p class="hidden">Self-taught programmer</p>
                     <p class="hidden">Several years of experience</p>
-                    <p class="hidden">Mainly inclined towards the front-end</p>
+                    <p class="hidden">Love contributing to open-source</p>
                     <p class="hidden">Enjoy solving problems</p>
                     <p class="hidden">Interested in learning new technologies</p>
                     <p class="hidden">Available for jobs</p>
