feat: added skill

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <article class="accordion-text">
                         <p>Javascript/Typescript</p>
                         <p>HTML/CSS/SASS</p>
-                        <p>React</p>
+                        <p>React/Next.js</p>
                         <p>Node.js</p>
-                        <p>Java</p>
+                        <p>Express</p>
                         <p>Git</p>
                         <p>And a few more</p>
                     </div>
