fix: update projects

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <p>Node.js</p>
                         <p>Express</p>
                         <p>Git</p>
-                        <p>And a few more</p>
+                        <p>And a few more...</p>
                     </div>
                 </article>
                 <div id="languages-container" class="container accordion">
